@@ -6,12 +6,17 @@ package de.uka.ilkd.key.proof.io;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.channels.Channels;
 import java.nio.channels.ReadableByteChannel;
 import java.nio.charset.CodingErrorAction;
 import java.nio.charset.StandardCharsets;
-import java.nio.file.Path;
+import java.nio.file.*;
+import java.util.HashMap;
+
+import org.key_project.util.java.StringUtil;
 
 import org.antlr.v4.runtime.CharStream;
 import org.antlr.v4.runtime.CharStreams;
@@ -51,7 +56,19 @@ public class UrlRuleSource extends RuleSource {
 
     @Override
     public Path file() {
-        return Path.of(url.toString());
+        try {
+            var uri = url.toURI();
+            try {
+                return Paths.get(uri);
+            } catch (FileSystemNotFoundException e) {
+                URI rootFs = URI.create(StringUtil.takeUntil(uri.toString(), "!"));
+                String internal = StringUtil.takeAfter(uri.toString(), "!");
+                FileSystem zipfs = FileSystems.newFileSystem(rootFs, new HashMap<>());
+                return zipfs.getPath(internal);
+            }
+        } catch (URISyntaxException | IOException e) {
+            throw new RuntimeException(e);
+        }
     }
 
     @Override
