@@ -8,7 +8,9 @@ import java.io.IOException;
 import java.io.PrintStream;
 import java.lang.reflect.InvocationTargetException;
 import java.net.URL;
+import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Locale;
@@ -135,7 +137,7 @@ public final class Main {
     /**
      * The file names provided on the command line
      */
-    private static List<File> fileArguments;
+    private static List<Path> fileArguments;
 
     /**
      * Lists all features currently marked as experimental. Unless invoked with command line option
@@ -146,7 +148,7 @@ public final class Main {
     /**
      * Path to a RIFL specification file.
      */
-    private static File riflFileName = null;
+    private static Path riflFileName = null;
 
     /**
      * Save all contracts in selected location to automate the creation of multiple ".key"-files
@@ -214,11 +216,11 @@ public final class Main {
     }
 
     public static void loadCommandLineFiles(AbstractMediatorUserInterfaceControl ui,
-            List<File> fileArguments) {
+            List<Path> fileArguments) {
         if (!fileArguments.isEmpty()) {
             ui.setMacro(autoMacro);
             ui.setSaveOnly(saveAllContracts);
-            for (File f : fileArguments) {
+            for (Path f : fileArguments) {
                 ui.loadProblem(f.toPath());
             }
             if (ui instanceof ConsoleUserInterfaceControl) {
@@ -408,7 +410,7 @@ public final class Main {
         }
 
         if (cl.isSet(RIFL)) {
-            riflFileName = new File(cl.getString(RIFL, null));
+            riflFileName = Paths.get(cl.getString(RIFL, null));
             LOGGER.info("Loading RIFL specification from {}", riflFileName);
         }
 
@@ -498,7 +500,7 @@ public final class Main {
      * @return a <code>UserInterfaceControl</code> based on the value of <code>uiMode</code>
      */
     private static AbstractMediatorUserInterfaceControl createUserInterface(
-            List<File> fileArguments) {
+            List<Path> fileArguments) {
 
         if (uiMode == UiMode.AUTO) {
             // terminate immediately when an uncaught exception occurs (e.g., OutOfMemoryError), see
@@ -531,7 +533,7 @@ public final class Main {
                 if (mostRecent != null) {
                     File mostRecentFile = new File(mostRecent);
                     if (mostRecentFile.exists()) {
-                        fileArguments.add(mostRecentFile);
+                        fileArguments.add(mostRecentFile.toPath());
                     } else {
                         LOGGER.info("File does not exist anymore: {}", mostRecentFile);
                     }
@@ -623,11 +625,11 @@ public final class Main {
      */
     public static Path getWorkingDir() {
         if (fileArguments != null && !fileArguments.isEmpty()) {
-            File f = fileArguments.get(0);
-            if (f.isDirectory()) {
+            var f = fileArguments.get(0);
+            if (Files.isDirectory(f)) {
                 return f.toPath();
             } else {
-                return f.toPath().getParent();
+                return f.getParent();
             }
         } else {
             return IOUtil.getCurrentDirectory().toPath();
@@ -638,8 +640,8 @@ public final class Main {
      * Perform necessary actions before loading any problem files. Currently only performs RIFL to
      * JML transformation.
      */
-    private static List<File> preProcessInput(List<File> filesOnStartup) {
-        List<File> result = new ArrayList<>();
+    private static List<Path> preProcessInput(List<Path> filesOnStartup) {
+        List<Path> result = new ArrayList<>();
         // RIFL to JML transformation
         if (riflFileName != null) {
             if (filesOnStartup.isEmpty()) {
@@ -647,7 +649,7 @@ public final class Main {
                 System.exit(-130826);
             }
             // only use one input file
-            File fileNameOnStartUp = filesOnStartup.get(0).getAbsoluteFile();
+            Path fileNameOnStartUp = filesOnStartup.getFirst().toAbsolutePath();
             // final KeYRecoderExceptionHandler kexh = ui.getMediator().getExceptionHandler();
             /*
              * weigl: disable rifl
